--- a/index.css
+++ b/index.css
@@ -1,68 +1,172 @@
-.mySlides {display: none}
+
 img {vertical-align: middle;}
+
+html{
+    width: 100%;
+    position: relative;
+    overflow: scroll;
+    overflow-x: hidden;
+}
+
+body{
+    margin: 0px;
+    padding:0px;
+    width: 100%;
+    border: 0px;
+    background-color: azure;
+}
+
+img{
+    width: 70vw;
+    height: 45vw;
+    margin-left: 9%;
+    margin-right: 20%;
+    background-color: lightgray;
+}
+
+h2, h4{
+    color: darkslategray;
+    text-align: center;
+}
+
+strong{
+    color: darkslategray;
+}
+
+.mySlides {
+    display: none;
+    width: 85vw;
+    height: 45vw;
+    background-color: #717171;
+}
 
 /* Slideshow container */
 .slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
+    height: 60vw;
+    width: 85vw;
+    position: relative;
+    margin:0px;
+    display: block;
+    border: solid white;
+}
+
+.slides-bg{
+    background-color: #717171;
+    width: 100%;
+    height: 35vw;
+}
+
+.numbertext{
+    width: 80vw;
+}
+
+li{
+    font-weight: bold;
+    font-size: 15px;
+    color: darkslategray;
+}
+.page-header{
+    text-align: -webkit-center;
+    padding-top: 40px;
+    padding-bottom: 40px;
+    padding-right: 100px;
+    padding-left: -10px;
+    margin: 0px;
+    background-color: darkslategray;
+    font-size: 30px;
+    color: white;
+    width: 100vw;
+}
+
+.main-content{
+    padding-top: 40px;
+    padding-left: 10vw;
+    padding-right: 10vw;
+    width: 80vw;
+}
+
+.btn{
+    background-color: cornflowerblue;
+    color: #fcfbfb;
+    padding: 20px;
+    margin: 5px;
+    margin-left: 40%;
+    margin-right: 40%;
+    border-radius: 8px;
+    border:solid white;
+
+    text-decoration: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    font-size: large;
+}
+.btn:hover {
+    background-color: white;
+    color: dodgerblue;
+    border: solid cornflowerblue;
 }
 
 /* Next & previous buttons */
 .prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: #fcfbfb;
+    background-color: #a5a4a4;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
+    right: 0;
+    border-radius: 3px 0 0 3px;
 }
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.8);
 }
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 99vw;
+    text-align: center;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
+    color: #131313;
+    font-size: 20px;
+    padding: 8px 12px;
+    position: relative;
+    text-align: -webkit-center;
+    top: 0;
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+    background-color: #717171;
 }
 
 /* Fading animation */
 .fade {
-  -webkit-animation-name: fade;
-  -webkit-animation-duration: 1.5s;
-  animation-name: fade;
-  animation-duration: 1.5s;
+    -webkit-animation-name: fade;
+    -webkit-animation-duration: 1.5s;
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+.site-footer{
+    margin-top: 10vw;
 }
